- resolved navbar overflow issue on mobiles

--- a/home/css/index.css
+++ b/home/css/index.css
@@ -23,6 +23,6 @@ body {
 	.content {
 		left: 20px;
 		padding-right: 20px;
-		font-size: 30px;
+		font-size: 28px;
 	}
 }
